# realtime-poc

./: .env  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  generator.py  go.mod  go.sum  init.sql  main.py  processor.py  pyproject.toml  pyrightconfig.json  reset.sh
.zed/: settings.json
benchmarks/20260218_221504_heavy-10k/: samples.csv  summary.json
cmd/benchstat/: main.go
cmd/loadgen/: main.go
cmd/pipeline/: main.go
conf/: application.properties
conf/debezium1/: application.properties
conf/debezium2/: application.properties
db/: deltalake_duckdb.db  init_sql1.sql  init_sql2.sql
diagrams/: diagram.excalidraw
docs/: architecture.md  benchmarks.md  configuration.md  data-model.md  limitations-and-roadmap.md  operations.md  overview-and-goals.md  runtime-behavior.md  technical-decisions.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
internal/cdc/: ingestor.go
internal/config/: config.go
internal/db/: sqlserver.go
internal/metadata/: repository.go
internal/projections/: common.go  duckdb_driver.go  kpi_worker.go  latest_worker.go
internal/staging/: repository.go
internal/util/: lsn.go
scripts/: generate_changes.sql  rebuild_all.sql  reset.sh  run_benchmark.sh  setup.sh  smoke_test.sh
scripts/benchmark_profiles/: heavy_10k.env  heavy_5k.env
sql/serving/: 00_init.sql  10_schema.sql
sql/source/: 00_init.sql  10_schema.sql  20_seed.sql  30_enable_cdc.sql
src/: main.rs
(+534 files in other folders)
